# Clawdy

./: .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  STARTUP_INSTRUCTIONS.md  TOOLS.md  USER.md  circle-deck-2026.html  memory_update_log.md
AI_System/: AGENTS.md
AI_System/notion_sync/: sync_log.md
AI_System/tasks/: tasks.md
manifestation-app/: README.md  demo-preview.html  package-lock.json  package.json
manifestation-app/app/: globals.css  layout.tsx  page.tsx  storage.ts  types.ts
projects/trendsense-agent/: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
projects/trendsense-agent/app/: __init__.py  cli.py  config.py  models.py
projects/trendsense-agent/app/collectors/: __init__.py
projects/trendsense-agent/app/integrations/: __init__.py
projects/trendsense-agent/app/ledger/: __init__.py
projects/trendsense-agent/app/processing/: __init__.py
projects/trendsense-agent/app/reporting/: __init__.py
projects/trendsense-agent/app/scoring/: __init__.py
projects/trendsense-agent/app/storage/: __init__.py  db.py  repository.py  schema.sql
projects/trendsense-agent/config/: scoring.yaml  sources.yaml  watchlists.yaml
projects/trendsense-agent/tests/: __init__.py  test_config.py  test_healthcheck.py  test_storage.py
skills/academic-research/: _meta.json
spanish/: README.md  spanish_error_ledger.md  spanish_expression_arsenal.md  spanish_openers_drill.md  spanish_profile.md  spanish_scenario_bank.md  spanish_session_log.md  spanish_vocab_bank.md  spanish_weekly_reviews.md
templates/: HD_template.pptx
(+34 files in other folders)
